@@ -78,6 +78,7 @@ New features:
 - New "Vx" interface, ported from modKore.
   See http://openkore.sourceforge.net/forum/viewtopic.php?p=50860
 - Display numerical character ID when logging in.
+- Server-side friend list support.
 
 New commands:
 - storage log
@@ -104,6 +105,15 @@ New commands:
   Craft arrows immediately without using the skill.
   On many servers any class can create arrows using this exploit.
   # is the inventory number of the item you wish to craft into arrows.
+- friend
+  List your friends, the online status is currently not functioning.
+- friend request #
+  Request a player to be your friend.
+  The player number is obtained by the 'pl' command.
+- friend accept
+  Accept the request to be friend.
+- friend reject
+  Reject the request to be friend.
 
 New config options:
 - partySkill: target_dead
